Sforce8 Project Data/src/objects/BookingEstimateItem__c.object
<CustomObject>
    <fields>
        <fullName>A__c</fullName>
        <formula>IF ( Not(NoneAccount__c) , IMAGE(&quot;/resource/&quot; &amp; $Setup.CommDefine__c.AppNS__c &amp; &quot;A&quot;,&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>このレコードは集計の対象に含まれています</inlineHelpText>
        <label>A</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountOutside__c</fullName>
        <formula>IF( NoneAccount__c , 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$集計対象外</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActionType__c</fullName>
        <description>普通の商品は　デフォルト値：通常で設定する、特別商品に対して、別々、商品種別に設定する
前受付金の場合、会計商品マスたに、価格はNull設定して、入力画面に自由入力する</description>
        <label>商品処理種別</label>
        <picklist>
            <picklistValues>
                <fullName>通常</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>前受付金</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>商品の数量を入力してください</inlineHelpText>
        <label>数量</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DPChange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>#DP</label>
        <referenceTo>DP__c</referenceTo>
        <relationshipLabel>会計マスタ (#DP)</relationshipLabel>
        <relationshipName>BookingEstimateItem71c4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <label>小計割引／割増</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>ﾌﾘｰ宣言</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>商品コード</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPChange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>集計先変更定義</inlineHelpText>
        <label>#GP</label>
        <referenceTo>GP__c</referenceTo>
        <relationshipLabel>会計マスタ</relationshipLabel>
        <relationshipName>BookingEstimateItemzeBO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GoukeinoneTax__c</fullName>
        <formula>Tankanonetax__c * Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$合計金額（税抜）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NoneAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>このレコードを集計の対象としない場合は、チェックを入れてください</inlineHelpText>
        <label>集計対象外</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OES__c</fullName>
        <label>OES用ﾒﾆｭｰ</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計OP</label>
        <referenceTo>OP__c</referenceTo>
        <relationshipLabel>会計マスタ</relationshipLabel>
        <relationshipName>BookingEstimateItemSUow</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <label>発注日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Orderer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>発注者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>予約見積明細</relationshipLabel>
        <relationshipName>BookingEstimateItemhHV6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PLU__c</fullName>
        <label>PLUｺｰﾄﾞ</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>商品名称（または券名称）</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_5__c</fullName>
        <inlineHelpText>セットメニューのインデックス番号、セットメニュー群は最大50個まで</inlineHelpText>
        <label>SCP(5)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectFoodt__c</fullName>
        <label>食事</label>
        <picklist>
            <picklistValues>
                <fullName>朝</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>昼</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>夕</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SelectFoodtime__c</fullName>
        <label>食事時間</label>
        <picklist>
            <controllingField>SelectFoodt__c</controllingField>
            <picklistValues>
                <fullName>6:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21:00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ServiceRate__c</fullName>
        <description>サービス料金（％）</description>
        <label>サービス料(%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SpTotal__c</fullName>
        <label>#合計金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SpecialTax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>特別税</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>発注先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>予約見積明細</relationshipLabel>
        <relationshipName>BookingEstimateItem6Vui</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tankanonetax__c</fullName>
        <formula>/*if ( OR(ISNULL(TaxRate__c),  TaxRate__c == 0),  UnitPrice__c , CEILING(UnitPrice__c/(1 + TaxRate__c)) )*/
/*
    // 1:税込、サービス料抜き
    // 2:税込、サービス料込
    // 3:税抜、サービス料抜き
*/
Case ($Setup.CommDefine__c.UnitPriceDefKb__c ,
1, CEILING( UnitPrice__c / ( 1 +  NULLVALUE (TaxRate__c, 0) ) ),
2, CEILING( UnitPrice__c / ( (1 + NULLVALUE (TaxRate__c, 0) ) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) ) ), 
3, UnitPrice__c ,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$単価(税抜)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>消費税</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>NULLVALUE(SpTotal__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$合計金額(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <inlineHelpText>空欄のまま保存すると、会計商品で定義した単価が設定されます</inlineHelpText>
        <label>単価(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1__c</fullName>
        <label>名称1(ｶﾅ)</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_1__c</fullName>
        <label>名称2(漢1)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_2__c</fullName>
        <label>名称3(漢2)</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X4_3__c</fullName>
        <label>名称4(漢3)</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>refAccountMaster__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>商品を選択して下さい</inlineHelpText>
        <label>商品名</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>予約見積明細</relationshipLabel>
        <relationshipName>BookingEstimateItemhSGP</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>refBooking__c</fullName>
        <label>ご予約</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>予約見積明細</relationshipLabel>
        <relationshipName>BookingEstimateItemFgKu</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>予約見積明細</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>予約見積明細#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>